# killer_options_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.test.yaml  config.yaml  pyproject.toml  railway.json  requirements.txt
scripts/: test_isolated.sh
src/killer_options_bot/: __init__.py  __main__.py  backtest.py  cli.py  config.py  export.py  indicators.py  live.py  market.py  models.py  paper.py  risk.py  scanner.py  storage.py  web.py  withdraw.py
src/killer_options_bot/brokers/: __init__.py  base.py  mock.py  tradier.py
tests/: conftest.py  test_backtest.py  test_check_tradier.py  test_config_tiers.py  test_costs.py  test_export.py  test_indicators.py  test_intraday.py  test_live.py  test_market.py  test_paper.py  test_pricing_costs.py  test_risk.py  test_run_loop.py  test_runtime_state.py  test_scaleout.py  test_scanner.py  test_signal_quality.py  test_storage_backends.py  test_strat.py  test_strategies.py  test_tradier_retry.py  test_web.py  test_withdraw.py
