[project]
name = "killer_options_bot"
version = "0.1.0"
description = "Small-account, paper-first options scanner and trade logger"
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
postgres = ["psycopg[binary]>=3.1"]

[project.scripts]
killer-options-bot = "killer_options_bot.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
